perf(project): 重构认证模块，原认证jwt逻辑不明确